# Ontologica

./: .gitignore  README.md  docs.md  index.html  main.hs  ontologica.hs  ontology_cli.py  pyproject.toml  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test_ontology.py  thekind"phoneme".ont  validdata.json
.github/workflows/: ci.yml
docs/: README.md  citations.md  docs.md  feature_spec.md  ontologica_examples.md  walkthrough.md
docs/Bibliography/: README.md
docs/about/: history.md
docs/bibliography/citations/: devaux_lamanna_2009.md  lamanna_2006.md  lorhard_1696.md  ohrstrøm_scharfe_uckelman_2008.md
old/: README.md
old/docs/: walkthrough.md
old/docs/user-guide/: applications.md
old/playground/: enumerate.py  integrating_contacts_and_communcation.py  playground.ipynb
old/playground/data/: data_privacy_law.txt
old/src/ontologica/: core.py  (+1 more)
old/tests/: conftest.py
ontology/: __init__.py  api.py  loaders.py  models.py  normalize.py  ontology.py
playground/: check_completeness.py  playground.ipynb  sample_data.py  sample_data.txt  synthetic_phonology.py
playground/data/: birds.txt  job_market_2025.txt  politicians.txt  upper_ontology.txt
src/cli/: ontology_cli.py
src/core/: __init__.py  core.py
src/ontologica/: core.py
tests/: test.py  test_ontology.py
tests/components/: test_public_api.py  test_statement.py  test_thing.py
tests/integrations/: test_persistence_integration.py
tests/old/: test.py
tests/user_stories/: test_museum_curator_story.py  test_policy_analyst_story.py  test_researcher_story.py
(+19 files in other folders)
