[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontologica"
version = "0.1.0"
description = "A tool for ontological modeling"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]